release 1.1.0